Replaced home.html with index.html and updated links

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <table class="navigationabout" > 
 
     <tr  > 
-      <th > <a href="home.html"> HOME </a></a></th>
+      <th > <a href="index.html"> HOME </a></a></th>
   
   
       <th><a href="about.html">ABOUT</a> </th>
