--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <table  class="navigationhome"> 
 
     <tr  > 
-    <th class="home" > <a href="home.html"> HOME </a></a></th>
+    <th class="home" > <a href="index.html"> HOME </a></a></th>
 
     <th  class="home"><a href="about.html">ABOUT</a> </th>
 
