--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
     <table class="registernavigation"> 
 
         <tr  > 
-          <th > <a href="home.html"> HOME </a></a></th>
+          <th > <a href="index.html"> HOME </a></a></th>
       
       
           <th><a href="about.html">ABOUT</a> </th>
