--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
     <br>
     The siminar will have four(4) sessions which will cover the whole two weeks.
-    Each sessions will involve different activities where one will learn and/or also be able to share his/her knowledge with the others.<br>
+    Each session will involve different activities where one will learn and/or also be able to share his/her knowledge with the others.<br>
 
     The seminar's venue is Julius Nyerere International Convention Centre ( JNICC) situated in Dar-es-Salaam, Tanzania.
-    This year's agriculture seminar is prepared by the INstitute of Technological Agriculture & Research, (ITAR.).
+    This year's agriculture seminar is prepared by the Institute of Technological Agriculture & Research, (ITAR.).
     <br>
     
 
