--- a/about.html
+++ b/about.html
@@ -33,8 +33,7 @@
 
     <p class="aboutp1">
       There are four sessions and in each sessions. We shall discuss on 
-      using different technologies that have been proven not only to make agricultural activities easier to perform 
-      but also increase the efficiency in agriculture as a general and thus leading to maximum yield of agricultural products both in farming sector and in the animal keeping sector or livestock keeping.
+      using different technologies that have been proven not only to make agricultural activities easier but also increase the efficiency in agriculture in general and thus leading to maximum yield of agricultural products both in farming sector and in the animal keeping sector or livestock keeping.
       <br>
 
     </p>
@@ -46,18 +45,17 @@
     <P> 
      In this session we shall discuss on how to use drones in our agriculture activities mainly focused on outside farming.
      <br>
-     This is mostly suitable on medium and  large scale farming as it simplifies the working process
+     This is mostly suitable on medium and  large scale farming as it simplifies the working process.
      <br> The drones can be used for several purposes such as:
      <ul>
       <li> Irrigation purposes</li>
       <li> Planning for future events by taking aerial photographs and studying the landscapes. </li>
-      <li> Realeasing medicines to crops in need with efficiency in time and the the in the task itself.</li>
-      <li> Last, it can also be used in the transportation of materials used in the field and also transporting of the harvested crops from the fields to the storage planned area.</li>
+      <li> Realeasing medicine to crops in need with efficiency.</li>
+      <li> Last, it can also be used in the transportation of materials used in the field and in transporting of the harvested crops from the fields to the storage area.</li>
 
      </ul>
 
-     Also in this session we will discuss on how to use the drones,from their settings before they fly to the moment they start flying and how to maintain while on air.
-
+     Also in this session we will discuss on how to operate the drone itself.
     </P>
      
   </div>
