--- a/about.html
+++ b/about.html
@@ -64,23 +64,21 @@
 
     <h1 class="abouth2">SESSION 2.</h1>
     <p>
-      In the second session we shall discuss on green house farming, aslo called the "The Inside Farming".It is in this section that we will know the answer to the great question," How do i begin Green-house farming."
+      In the second session we shall discuss on green house farming, also called the "The Inside Farming".It is in this section that we will know the answer to the great question," How do I begin Green-house farming."
       By starting with a simple definition, A green house is a special structure that is built with the purpose of housing plants of a wide variety,
-       with the aim of regulating the aspects of the weather that truly in one way or the other affect the growth of plants.
-      The main aspects that are mainly focused on are temperature, humidity and sunshine.
+       with the aim of regulating the aspects of weather that affect the growth of plants.
+      The aspects that are mainly focused on are temperature, humidity and sunshine.
       <br>
-      It is in after this session that one will be able to build his/her own  complete green house,
-       maintain it and finally be able to use it for aim of developing different sets of crop(s) with maximum effectiveness and efficiency without forgetting maximing profits as well. 
+      In this session one will get the knowledge to build his/her own  complete green house,
+       maintain it and be able to use it for aim of developing different set of crop(s) with maximum effectiveness and efficiency  and without forgetting maximizing profits as well. 
       <br>
-        Just to mention a few, the advantages of using green house in your crop cultivation is as follows below.
+        Just to mention a few, the advantages of using green house in your crop cultivation is as follows below:
         <ul>
-          <li> First and foremost, it is quite effective and efficient in pest control. This is because the crops being housed helps to prevent contact from outside pests. </li>
+          <li> First and foremost, it is quite effective and efficient in pest control. This is because the housing of the crops helps to prevent contact from outside pests. </li>
           <li> Second, it gives man total control of the weather. When properly built, 
-            the green house can maintain a constant aspect(s) of weather such as temperature and humidity set by man even 
+            the green house can maintain a constant weather such as temperature and humidity which can be set by the farmer him/herself. Even 
             when the outside weather changes, the inside remains fairly constant.</li>
-            <li> Lastly,its quite effective and efficient as it allows a wide variety of crops to be grown all together in one green house.
-              But also its quite effective in the maximum yield of crop products.
-            </li>
+            <li> Lastly,its quite effective and efficient as it allows a wide variety of crops to be grown all together in one green house. </li>
         </ul>
     
     </p>
@@ -94,18 +92,17 @@
     <h1 class="abouth3"> SESSION 3.</h1>
     <p>
 
-      In this third session, will be for anyone and everyone who is intrigued and attracted in large-scale farming.
+      In this third session, will be for anyone who is attracted to large-scale farming.
       <br>
-      It is in session that one will know the smart way of performing large scale farming as it is solely done for profit purposes
-       thus one has to be very careful on how to prepare, maintaon and execute large scale farming.
+      In this session one will be able to learn the smart ways of performing large scale farming
        <br>
 
-       Large scale farming is quite often associated with different technological equipmnets as it involves the use of heavy machinery such as tractors and large scale irrigation schemes
-        as it is performed on a large piece of land hence the name Large scale farming.
+       Large scale farming is quite often associated with different technological equipments as it involves the use of heavy machinery such as tractors and large scale irrigation schemes
+        when performed on a large piece of land.
         <br>
         Hence, one will gain knowledge on how to use and maintain the heavy machineries such as the tractors while performing the large scale farming.
         <br>
-        One will also gain the knowledge of how to setup and maintain large scale irrigation systems, that will enable him/her not only irrigate a large piece of land easily and simultaneously
+        One will also gain knowledge on how to setup and maintain large scale irrigation systems, that will enable him/her not only irrigate on large pieces of land easily and simultaneously
          but also be able to spray medicine, nutrients required and/or pestscides for pest control simultaneously over a large piece of land. 
 
 
@@ -119,17 +116,16 @@
     <h1 class="abouth4">SESSION 4.</h1>
     <p>
 
-      In this last session, we shall close the seminar with discussing dairy cattle keeping commonly reggered to as "Livestock-keeping".
+      In this last session, we shall close the seminar with discussing dairy cattle keeping commonly reffered to as "Livestock-keeping".
       <br>
-      We shall put the main focus on cows as we will learn on how to provide and take care of them and their needs
-       so that one can gain maximum yield of their products over a long period of time as the saying goes" YOU TAKE CARE OF THEM, THEY TAKE CARE OF YOU."
-       <br>
-       Our main focus is on cows as they are a common among us farmers but also it is because they have more to return than other animals. 
+      We shall put the main focus on cows as we will learn on how to provide and take care of them and meet their needs
+       so that one can gain maximum yield of their products over a long period of time.
+       Our main focus will be on cows as they are a common among farmers.
        They provide products like milk,meat, their skin can be used for manufacturing products like belts and shoes when properly processed, and
         without forgetting they also produce manure which can be used in crop cultivation thus the focus on cows.
         <br>
-        In this session, we shall also be able to visit some wonderful ranches where we will kearn more from first hand experiensed livestock keepers and
-         we might be able to even engage in some activities such as milking the cows ourselves as they "MAKING OUR HANDS DIRTY". 
+        In this session, we shall also be able to visit some wonderful ranches where we will learn more from first hand experienced livestock keepers and
+         we might be able to even engage in some activities such as milking the cows ourselves. 
 
 
 
