--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
       In this last session, we shall close the seminar with discussing dairy cattle keeping commonly reffered to as "Livestock-keeping".
       <br>
       We shall put the main focus on cows as we will learn on how to provide and take care of them and meet their needs
-       so that one can gain maximum yield of their products over a long period of time.
+       so that maximum yield of their products can be obtained over a long period of time.
        Our main focus will be on cows as they are a common among farmers.
        They provide products like milk,meat, their skin can be used for manufacturing products like belts and shoes when properly processed, and
         without forgetting they also produce manure which can be used in crop cultivation thus the focus on cows.
